--- a/public/css/main.css
+++ b/public/css/main.css
@@ -222,6 +222,14 @@ article span.date {
   margin-bottom:5px;
   display:none;
 }
+.site-message {
+    display:block;
+    background:#fcf8e3;
+    text-align: center;
+    padding:10px 0;
+    border:1px solid #ddd;
+    margin-top:30px;
+}
 /******************************************
  * PROJECT FORMATTING
  ******************************************/
