--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -43,3 +43,16 @@
 .admin-nav li strong {
     margin-left:7px;
 }
+.article-editor input[type="submit"] {
+    width:auto;
+    padding:5px 10px;
+    clear:both;
+    display:block;
+}
+.article-editor h2 {
+    text-align: left;
+}
+.article-editor form label[for="public"] {
+  display:inline-block;
+  margin-left:5px;
+}
