--- a/public/css/main.css
+++ b/public/css/main.css
@@ -377,7 +377,12 @@ form  input,textarea {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+form label[for="remember"] {
+  display:inline-block;
+  margin-left:5px;
+}
 form input[type="checkbox"] {
+    display:inline-block;
     width:auto;
     padding:0;
 }
