Began looking at password change function in usercontroller

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -232,6 +232,10 @@ article span.date {
     position:relative;
     color:#8a6d3b;
 }
+.site-message.error {
+    background:#f00;
+    color:#fff;
+}
 .close-button {
   position:absolute;
   top:0;
