--- a/public/css/main.css
+++ b/public/css/main.css
@@ -493,8 +493,10 @@ blockquote cite:before {
 }
 .article-info span:hover {
   background:#f60;
-  color:#fff;
   cursor: pointer;
+}
+.article-info span a {
+    color:#fff;
 }
 
 /******************************************
