--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,7 +178,7 @@ footer img {
 }
 #crumbtrail li {
   display:inline-block;
-  padding:5px;
+  padding:5px 5px 5px 0;
   color:#666;
   margin-right:5px;
 }
@@ -191,8 +191,6 @@ footer img {
 #crumbtrail .extra {
   float:right;
   display:inline-block;
-}
-#crumbtrail .extra-date {
   padding:5px 0;
 }
 input,textarea {
@@ -668,4 +666,49 @@ hr {
     border-top: 1px solid #ccc;
     margin: 25px 0;
     padding: 0;
+}
+
+/*
+ * Pagination elements
+ */
+
+.pagination ul {
+  display: inline-block;
+  *display: inline;
+  /* IE7 inline-block hack */
+  *zoom: 1;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+.pagination li {
+  display:inline-block;
+  border:1px solid #ccc;
+  border-left-width: 0;
+  padding:0;
+}
+.pagination li a, .pagination li span {
+  padding: 8px 12px;
+  background:#fff;
+  border-left-width: 0;
+  display:inline-block;
+}
+.pagination a {
+  color:#333;
+  text-decoration: none;
+}
+.pagination a:hover {
+  background-color: #09f;
+  color:#fff;
+}
+.pagination .active span, .pagination .disabled span {
+  background-color: transparent;
+  cursor: default;
+  color:#ccc;
+}
+.pagination li:first-child {
+  border-left-width: 1px;
 }
