Created edit views, and view.. views.. :+1:

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -82,3 +82,12 @@ form .error {
     display:none;
   }
 }
+table td a {
+    color:#333;
+}
+table td a:hover {
+    color:#f60;
+}
+table i.fa-check-square.disabled {
+    color:#ccc;
+}
