--- a/public/css/main.css
+++ b/public/css/main.css
@@ -761,7 +761,11 @@ td {
     width:20%;
 }
 td:first-of-type {
-    width:60%;
+    width:10%;
+    text-align: center;
+}
+td.large {
+    width:50%;
 }
 
 /*
