--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -97,3 +97,9 @@ table i.fa-check-square.disabled {
 .article-editor .site-message {
     margin:0 0 30px;
 }
+
+@media (max-width: 800px) {
+    .admin ul {
+        margin:0;
+    }
+}
