Article based changes in production because balls of steel

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,600italic,700");
 @import url("http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600");
 
 /******************************************
@@ -503,10 +503,18 @@ article h1 {
   font-weight:600;
   font-size:28px;
 }
+article h2 {
+    text-align:left;
+    margin:0;
+    padding:30px 0 10px;
+}
 article p {
   text-align: left;
   font-size: 16px;
   padding:15px 0;
+}
+article em {
+    font-style: italic;
 }
 article img {
 
