--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -8,16 +8,20 @@
   display:inline-block;
   z-index:1;
 }
-.admin ul.right {
+.admin .right {
   float: right;
-  margin-right: 20%;
 }
 .admin button {
     text-transform: uppercase;
     padding:5px 7px;
     border:1px solid #ccc;
-    background:#eee;
+    background:#f6f6f6;
     cursor: pointer;
+    outline:none;
+    text-shadow:none;
+}
+.admin button i {
+    font-size:12px;
 }
 .admin button:hover {
     color: #f60;
@@ -54,25 +58,6 @@ form .error {
   border: 1px solid #ccc;
   border-left: 3px solid #f99;
 }
-@media (max-width: 800px) {
-  .admin {
-    padding:10px 0;
-    font-size:14px;
-  }
-  .admin ul {
-    margin:0;
-    float:left;
-    width:100%;
-    text-align:left;
-    margin-left:5%;
-  }
-  .admin li {
-    padding:5px 10px;
-  }
-  .admin i {
-    display:none;
-  }
-}
 table td a {
     color:#333;
 }
@@ -89,17 +74,125 @@ table i.fa-check-square.disabled {
     margin:0 0 30px;
 }
 
+@media (min-width: 1001px) {
+    .admin ul {
+        margin-right: 20%;
+    }
+}
 @media (max-width: 1000px) {
     .admin ul {
         margin-right: 10%;
     }
 }
-
 @media (max-width: 800px) {
     .admin ul {
         margin:0;
+        float:left;
+        width:100%;
+        text-align:left;
+        margin-left:5%;
     }
     .admin li:first-of-type {
         margin-left:5%;
     }
+    .admin i {
+        display:none;
+    }
+}
+
+/* admin */
+
+.dropdown {
+    position: absolute;
+    z-index: 84;
+    display: none;
+}
+
+.dropdown .dropdown-menu,
+.dropdown .dropdown-panel {
+    min-width: 160px;
+    max-width: 360px;
+    list-style: none;
+    background: #FFF;
+    border: solid 1px #DDD;
+    border: solid 1px rgba(0, 0, 0, .2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    overflow: visible;
+    padding: 4px 0;
+    margin: 0;
+}
+
+.dropdown .dropdown-panel {
+    padding: 10px;
+}
+
+.dropdown.dropdown-tip {
+    margin-top: 12px;
+}
+
+.dropdown.dropdown-tip:before {
+  position: absolute;
+  top: -6px;
+  left: 9px;
+  content: '';
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #CCC;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  display: inline-block;
+}
+
+.dropdown.dropdown-tip.dropdown-anchor-right:before {
+    left: auto;
+    right: 9px;
+}
+
+.dropdown.dropdown-tip:after {
+  position: absolute;
+  top: -5px;
+  left: 10px;
+  content: '';
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #FFF;
+  display: inline-block;
+}
+
+.dropdown.dropdown-tip.dropdown-anchor-right:after {
+    left: auto;
+    right: 10px;
+}
+
+
+.dropdown.dropdown-scroll .dropdown-menu,
+.dropdown.dropdown-scroll .dropdown-panel {
+    max-height: 358px;
+    overflow: auto;
+}
+
+.dropdown .dropdown-menu li {
+    list-style: none;
+    padding: 0 0;
+    margin: 0;
+    line-height: 18px;
+    display:block;
+    text-align: left;
+}
+
+.dropdown .dropdown-menu li > a,
+.dropdown .dropdown-menu label {
+    display: block;
+    color: #555;
+    text-decoration: none;
+    line-height: 18px;
+    padding: 3px 15px;
+    margin: 0;
+    white-space: nowrap;
+}
+
+.dropdown .dropdown-menu li > a:hover,
+.dropdown .dropdown-menu label:hover {
+    background-color: #fff;
+    color: #f60;
+    cursor: pointer;
 }
