--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,12 +1,12 @@
 .admin {
   position:relative;
   margin:-38px 0 30px;
-  background:#ececec;
   padding:10px 0;
   border-top:none;
-  border-bottom:1px solid #ccc;
+  border-bottom:1px dotted #ccc;
   display:inline-block;
   z-index:1;
+  background:#fff;
 }
 .admin .right {
   float: right;
@@ -15,7 +15,7 @@
     text-transform: uppercase;
     padding:5px 7px;
     border:1px solid #ccc;
-    background:#f6f6f6;
+    background:#fff;
     cursor: pointer;
     outline:none;
     text-shadow:none;
@@ -110,16 +110,15 @@ table i.fa-check-square.disabled {
 
 .dropdown .dropdown-menu,
 .dropdown .dropdown-panel {
-    min-width: 160px;
-    max-width: 360px;
+    min-width: 100px;
+    max-width: 300px;
     list-style: none;
     background: #FFF;
-    border: solid 1px #DDD;
-    border: solid 1px rgba(0, 0, 0, .2);
+    border: dotted 1px #DDD;
+    border: dotted 1px rgba(0, 0, 0, .2);
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
     overflow: visible;
     padding: 4px 0;
-    margin: 0;
 }
 
 .dropdown .dropdown-panel {
@@ -135,9 +134,9 @@ table i.fa-check-square.disabled {
   top: -6px;
   left: 9px;
   content: '';
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  border-bottom: 7px solid #CCC;
+  border-left: 7px dotted transparent;
+  border-right: 7px dotted transparent;
+  border-bottom: 7px dotted #ccc;
   border-bottom-color: rgba(0, 0, 0, 0.2);
   display: inline-block;
 }
@@ -152,9 +151,9 @@ table i.fa-check-square.disabled {
   top: -5px;
   left: 10px;
   content: '';
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-bottom: 6px solid #FFF;
+  border-left: 6px dotted transparent;
+  border-right: 6px dotted transparent;
+  border-bottom: 6px dotted #fff;
   display: inline-block;
 }
 
