--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -118,7 +118,7 @@ table i.fa-check-square.disabled {
     border: dotted 1px rgba(0, 0, 0, .2);
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
     overflow: visible;
-    padding: 4px 0;
+    padding: 0;
 }
 
 .dropdown .dropdown-panel {
@@ -170,23 +170,31 @@ table i.fa-check-square.disabled {
 }
 
 .dropdown .dropdown-menu li {
+    font-size:13px;
     list-style: none;
-    padding: 0 0;
+    padding: 4px 0;
     margin: 0;
     line-height: 18px;
     display:block;
     text-align: left;
+    text-transform: uppercase;
+    font-weight:600;
+    border-top:1px solid #eee;
+}
+.dropdown .dropdown-menu li:first-of-type {
+    border-top:none;
 }
 
 .dropdown .dropdown-menu li > a,
 .dropdown .dropdown-menu label {
     display: block;
-    color: #555;
+    color: #333;
     text-decoration: none;
     line-height: 18px;
     padding: 3px 15px;
     margin: 0;
     white-space: nowrap;
+    font-weight:600;
 }
 
 .dropdown .dropdown-menu li > a:hover,
